k8s/order.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  selector:
    matchLabels:
      app: order

  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: img-deployment
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: order-conf
            subPath: .env
            mountPath: /home/node/app/.env

      volumes:
      - name: order-conf
        configMap:
          name: order-conf
          items:
            - key: env
              path: .env
          

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
  selector:
    app: order

---
  
  apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: order-gateway
  spec:
    selector:
      istio: ingressgateway # use Istio default gateway implementation
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:  
      - "*"

---
  
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: order-vs
  spec:
    hosts:
    - "*"
    gateways:
    - order-gateway
    http:
    - match:
      - uri:
          prefix: /orders
      route:
      - destination:
          port:
            number: 3000
          host: order-service
